Bug fix: remove snap on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,17 +11,17 @@
 
 html {
   // overflow: hidden;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   // scroll-snap-points-y: repeat(100vh);
   // -webkit-scroll-snap-points-y: repeat(100vh);
   // scroll-snap-destination: 0 0;
   // -webkit-scroll-snap-destination: 0 0;
-  scroll-snap-type: y mandatory;
-  -webkit-scroll-snap-type: y mandatory;
   // scroll-snap-type: mandatory;
   // -webkit-scroll-snap-type: mandatory;
   // --scroll-behavior: smooth;
-  overscroll-behavior: none;
+  // scroll-snap-type: y mandatory;
+  // -webkit-scroll-snap-type: y mandatory;
+  // overscroll-behavior: none;
   // scroll-behavior: smooth;
 }
 
